# RProtoBufLib

./: BinaryFiles  DESCRIPTION  INSTALL  NEWS.md  README.md  cleanup  cleanup.win  configure  configure.ac
.github/workflows/: build.yml
R/: build.R  hooks.R  zzz.R
inst/: NEWS
inst/include/: GatingSet.pb.h  GatingSet.proto  generate_pb_code.sh
inst/include/cytolib/: GatingSet.pb.h
man/: LdFlags.Rd
src/: Makevars.in  Makevars.ucrt  Makevars.win  bundle_protobuf_instruction.txt  protobuf-2.6.0.tgz
src/GatingSet_pb_lib/: GatingSet.pb.cc  GatingSet.proto
tools/: downloadlibs.R
vignettes/: UsingRProtoBufLib.Rmd
